setup database, connect dynamo  from nest server and create table.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 AWS_ACCESS_KEY_ID=local-access-key
 AWS_SECRET_ACCESS_KEY=local-secret-key
 REGION=us-west-2
+DATABASE_ENDPOINT_URL=http://localhost:8000
