--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,20 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "libs/database": [
+        "libs/database/src"
+      ],
+      "libs/database/*": [
+        "libs/database/src/*"
+      ],
+      "libs/common": [
+        "libs/common/src"
+      ],
+      "libs/common/*": [
+        "libs/common/src/*"
+      ]
+    }
   }
 }
