--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "husky": "^9.0.11",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -43,6 +47,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
@@ -50,9 +55,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "husky": "^8.0.0"
+    "tsconfig-paths": "^4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -76,7 +79,8 @@
     ],
     "moduleNameMapper": {
       "^libs/database(|/.*)$": "<rootDir>/libs/database/src/$1",
-      "^libs/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+      "^libs/common(|/.*)$": "<rootDir>/libs/common/src/$1",
+      "^libs/content(|/.*)$": "<rootDir>/libs/content/src/$1"
     }
   }
 }
