--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ AWS_ACCESS_KEY_ID=local-access-key
 AWS_SECRET_ACCESS_KEY=local-secret-key
 REGION=us-west-2
 DATABASE_ENDPOINT_URL=http://localhost:8000
+
+
+REDIS_PORT=6379
+REDIS_HOST=redis
