--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .:/usr/src/app
     depends_on:
       - dynamodb-local
+      - redis
 
   dynamodb-local:
     command: '-jar DynamoDBLocal.jar -sharedDb -dbPath ./data'
@@ -23,3 +24,13 @@ services:
     volumes:
       - './docker/dynamodb:/home/dynamodblocal/data'
     working_dir: /home/dynamodblocal
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
+
+volumes:
+  redis_data:
